--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
     <head>
         <meta charset=utf-8>
+        <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1"/>
+        
         <title>Mahjong Solitarie Classic by Rafael Odon</title>
         <style>
             html,
@@ -11,18 +13,22 @@
                 overflow: hidden;
                 height: 100%;
                 width: 100%;
+                background-color: #A0CAB5;                               
             }
-
-            canvas {
-                background-color: #A0CAB5;
-                height: 100%;
+            #container{
                 width: 100%;
-            }
+                height: 100%;
+                display: flex;
+                align-items: center; 
+                justify-content: center;
+            }            
         </style>
     </head>
 
     <body>
-        <canvas id="canvas"></canvas>
+        <div id="container">
+            <canvas id="canvas"></canvas>
+        </div>
     </body>
     
     <script src="audio.js"></script>
