--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     
     <script src="audio.js"></script>
     <script src="tiles.js"></script>
+    <script src="loop.js"></script>
     <script src="mahjong.js"></script>
 
 </html>
