--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 background: #FFF;
                 font-weight: bold;
                 text-transform: uppercase;
+                font-size: 2.5vh;
             }
             button:hover{
                 background: #BDAEC6;
