--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
     <body>
         <div id="container">            
             <canvas id="canvas"></canvas>            
-            <div id="topbar">                
-                <button id="btnNewGame">New Game</button>                
+            <div id="topbar">                                
+                <button id="btnUndo">Undo</button>
+                <button id="btnNewGame">New</button>
             </div>
         </div>
     </body>
