--- a/index.html
+++ b/index.html
@@ -5,54 +5,21 @@
         <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1"/>
         <link rel="manifest" href="manifest.json?v=1.0.0">    
         <title>Mahjong Solitarie Classic by Rafael Odon</title>
-        <style>
-            html,
-            body {
-                margin: 0;
-                padding: 0;
-                overflow: hidden;
-                height: 100%;
-                width: 100%;
-                background-color: #A0CAB5;                               
-            }
-            #container{
-                width: 100%;
-                height: 100%;
-                display: flex;
-                align-items: center; 
-                justify-content: center;
-            }            
-            #topbar{
-                position: absolute;                
-                top: 0;
-                text-align: right;
-                width: 100%;
-                margin-top: 0.2em;
-                margin-right: 0.2em;                
-            }
-            button{
-                border: 0px;
-                border-radius: 1em;                
-                padding: 0.4em 1em 0.4em 1em;
-                font-family: sans-serif;
-                background: #FFF;
-                font-weight: bold;
-                text-transform: uppercase;
-                font-size: 2.5vh;
-            }
-            button:hover{
-                background: #BDAEC6;
-            }
+        <link rel="stylesheet" href="style.css">                    
         </style>
     </head>
 
     <body>
         <div id="container">            
-            <canvas id="canvas"></canvas>            
-            <div id="topbar">                                
-                <button id="btnUndo">Undo</button>
-                <button id="btnNewGame">New</button>
+            <div id="topbar">   
+                <div id="moves"></div>
+                <div id="time"></div>
+                <div id="buttons">
+                    <button id="btnUndo">↻ Undo</button>
+                    <button id="btnNewGame">★ New</button>
+                </div>
             </div>
+            <canvas id="canvas"></canvas>                        
         </div>
     </body>
     
