Hint + solvable dispositions

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <div id="moves"></div>
                 <div id="time"></div>
                 <div id="buttons">
+                    <button id="btnHint">☚ Hint</button>
                     <button id="btnUndo">↻ Undo</button>
                     <button id="btnNewGame">★ New</button>
                 </div>
