--- a/index.html
+++ b/index.html
@@ -41,4 +41,6 @@
     <script src="tiles.js"></script>
     <script src="loop.js"></script>
     <script src="mahjong.js"></script>
+    <script src="dist.js"></script>
+    <script src="mahjong-core.js"></script>
 </html>
