Major multi-module refactor. Solver.

--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
     
     <script src="modal.js"></script>
     <script src="audio.js"></script>
-    <script src="tiles.js"></script>
     <script src="loop.js"></script>
-    <script src="mahjong.js"></script>
-    <script src="dist.js"></script>
+    <script src="mahjong-utils.js"></script>    
+    <script src="mahjong-tiles.js"></script>    
     <script src="mahjong-core.js"></script>
+    <script src="mahjong-solver.js"></script>    
+    <script src="index.js"></script>    
+    <script src="dist.js"></script>    
 </html>
