--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1"/>
         <link rel="manifest" href="manifest.json?v=1.0.0">    
         <title>Mahjong Solitaire Classic by Rafael Odon</title>
-        <link rel="stylesheet" href="style.css">                    
+        <link rel="stylesheet" href="css/index.css">                    
         </style>
     </head>
 
@@ -39,14 +39,13 @@
         </div>  
     </body>
     
-    <script src="modal.js"></script>
-    <script src="audio.js"></script>
-    <script src="loop.js"></script>
-    <script src="timer.js"></script>
-    <script src="mahjong-utils.js"></script>    
-    <script src="mahjong-tiles.js"></script>    
-    <script src="mahjong-core.js"></script>
-    <script src="mahjong-solver.js"></script>    
-    <script src="index.js"></script>    
-    <script src="dist.js"></script>    
+    <script src="js/modal.js"></script>
+    <script src="js/audio.js"></script>
+    <script src="js/loop.js"></script>
+    <script src="js/timer.js"></script>
+    <script src="js/mahjong-utils.js"></script>    
+    <script src="js/mahjong-tiles.js"></script>    
+    <script src="js/mahjong-core.js"></script>
+    <script src="js/mahjong-solver.js"></script>    
+    <script src="js/index.js"></script>        
 </html>
