--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="manifest" href="manifest.json?v=1.0.0">    
         <title>Mahjong Solitaire Classic by Rafael Odon</title>
         <link rel="stylesheet" href="css/index.css">                    
+        <link rel="icon" type="image/x-icon" href="img/favicon.ico">
         </style>
     </head>
 
