--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
         <link rel="stylesheet" href="css/index.css">                    
         <link rel="icon" type="image/x-icon" href="img/favicon.ico">
         </style>
+        <script>
+            if (typeof navigator.serviceWorker !== 'undefined') {
+              navigator.serviceWorker.register('sw.js')
+            }
+        </script>
     </head>
 
     <body>
