--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         </div>
         <div id="container" class="animatedHidden">                                  
             <div id="topbar">                   
-                <div id="moves"></div>
+                <div id="moves"></div>                
                 <div id="time"></div>                                
+                <div id="version"></div>
                 <div class="buttons">                    
                     <button id="btnSound">Sound Off</button>
                     <button id="btnHint">☜ Hint</button>
