--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset=utf-8>
-        <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1"/>
-        <link rel="manifest" href="manifest.json?v=1.0.0">    
         <title>Mahjong Solitaire Classic by Rafael Odon</title>
+        <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1"/>                
+        <link rel="manifest" href="manifest.json">                    
         <link rel="stylesheet" href="css/index.css">                    
         <link rel="icon" type="image/x-icon" href="img/favicon.ico">
         </style>
@@ -49,10 +49,11 @@
     <script src="js/modal.js"></script>
     <script src="js/audio.js"></script>
     <script src="js/loop.js"></script>
-    <script src="js/timer.js"></script>
+    <script src="js/timer.js"></script>    
     <script src="js/mahjong-utils.js"></script>    
     <script src="js/mahjong-tiles.js"></script>    
     <script src="js/mahjong-core.js"></script>
     <script src="js/mahjong-solver.js"></script>    
+    <script src="js/mahjong-data.js"></script>
     <script src="js/index.js"></script>        
 </html>
