--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
         <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1"/>                
         <link rel="manifest" href="manifest.json">                    
         <link rel="stylesheet" href="css/index.css">                    
-        <link rel="icon" type="image/x-icon" href="img/favicon.ico">
-        </style>
+        <link rel="icon" type="image/x-icon" href="img/favicon.ico">        
         <script>
             if (typeof navigator.serviceWorker !== 'undefined') {
               navigator.serviceWorker.register('sw.js')
@@ -50,6 +49,7 @@
     <script src="js/audio.js"></script>
     <script src="js/loop.js"></script>
     <script src="js/timer.js"></script>    
+    <script src="js/tween.js"></script>    
     <script src="js/mahjong-utils.js"></script>    
     <script src="js/mahjong-tiles.js"></script>    
     <script src="js/mahjong-core.js"></script>
