--- a/index.html
+++ b/index.html
@@ -45,18 +45,11 @@
                 </div>
             </div>            
         </div> 
-        <div id="ranking">            
-            <table id="rankingTable">                                                    
-                <tr><td>2</td><td>2022-01-01</td><td>350 s</td><td>1 undo</td></tr>
-                <tr><td>3</td><td>2022-01-01</td><td>350 </td><td>1 undo</td></tr>
-                <tr><td>4</td><td>2022-01-01</td><td>350 s</td><td>1 undo</td></tr>
-                <tr><td>5</td><td>2022-01-01</td><td>350 s</td><td>1 undo</td></tr>
-                <tr><td>6</td><td>2022-01-01</td><td>350 s</td><td>1 undo</td></tr>
-                <tr><td>7</td><td>2022-01-01</td><td>350 s</td><td>1 undo</td></tr>
-                <tr><td>8</td><td>2022-01-01</td><td>350 s</td><td>1 undo</td></tr>
-                <tr><td>9</td><td>2022-01-01</td><td>350 s</td><td>1 undo</td></tr>
-                <tr><td>10</td><td>2022-01-01</td><td>350 s</td><td>1 undo</td></tr>                
-            </table>
+        <div class="hidden">
+            <div id="ranking">
+                <table id="rankingTable">                                                                    
+                </table>
+            </div>
         </div>
     </body>
     
