Combo animation using html/css.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         <div id="container" class="animatedHidden">                                  
             <div id="topbar">                   
                 <div id="moves"></div>
-                <div id="time"></div>
-                <div id="version"></div>
+                <div id="time"></div>                
                 <div class="buttons">                    
                     <button id="btnRanking">Ranking</button>
                     <button id="btnSound">Sound Off</button>
@@ -44,6 +43,11 @@
                     <button class="modalCancelButton">Cancel</button>
                 </div>
             </div>            
+        </div>
+        <div id="version"></div>
+        <div id="combo" class="animatedHidden">
+            <div id="comboBar"></div>
+            <div id="comboText">1 combo</div>
         </div>         
     </body>
     
