Major aesthetics changes.

--- a/index.html
+++ b/index.html
@@ -45,12 +45,13 @@
             </div>            
         </div>
         <div id="version"></div>
-        <div id="combo" class="animatedHidden">
+        <div id="combo" class="hidden">
             <div id="comboBar"></div>
-            <div id="comboText">1 combo</div>
+            <div id="comboText"></div>
         </div>         
     </body>
     
+    <script src="js/colors.js"></script>
     <script src="js/modal.js"></script>
     <script src="js/audio.js"></script>
     <script src="js/loop.js"></script>
